Fixed BFS, removed Weight calculations from algorithms
DFS needs the old weight calculation, but they don't seem to be accurate, so I moved that calculation to whenever the path is being printed.